[gd_scene load_steps=22 format=3 uid="uid://c1g6c6bf2rtfe"]

[ext_resource type="Script" uid="uid://d0bfd1lgyny5b" path="res://views/player_hud/player_hud.gd" id="1_unnjh"]
[ext_resource type="FontFile" uid="uid://tqxi1opp0xpn" path="res://assets/fonts/Minecraft.ttf" id="2_5colf"]
[ext_resource type="Theme" uid="uid://blem1dnpbfmm1" path="res://assets/themes/button_theme.tres" id="2_7xjn2"]
[ext_resource type="LabelSettings" uid="uid://c0sgp66c8rapj" path="res://assets/themes/card_binder_menu.tres" id="2_jklyp"]
[ext_resource type="PackedScene" uid="uid://dw0a0adakonek" path="res://views/player_hud/action_button/action_button.tscn" id="2_lvbhi"]
[ext_resource type="Texture2D" uid="uid://303e88y73vww" path="res://assets/art/items/coin.png" id="2_mpvuq"]
[ext_resource type="PackedScene" uid="uid://dnx046gjbv1vx" path="res://characters/enemies/enemy_assets/health_bar/health_bar.tscn" id="2_ubjkd"]
[ext_resource type="StyleBox" uid="uid://ckbqoxy2and2m" path="res://characters/enemies/enemy_assets/health_bar/health_bar_background.tres" id="3_fktly"]
[ext_resource type="StyleBox" uid="uid://b26crx4uicldp" path="res://characters/enemies/enemy_assets/health_bar/health_bar_fill.tres" id="4_fwxer"]
[ext_resource type="StyleBox" uid="uid://fbsjj6l4obkg" path="res://characters/enemies/enemy_assets/health_bar/damage_bar_background.tres" id="5_wg8lk"]
[ext_resource type="StyleBox" uid="uid://cw1y5yl81jgra" path="res://characters/enemies/enemy_assets/health_bar/damage_bar_fill.tres" id="6_3xaa5"]

[sub_resource type="Theme" id="Theme_dytfj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1lpr5"]
atlas = ExtResource("2_mpvuq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwh33"]
atlas = ExtResource("2_mpvuq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5vh5"]
atlas = ExtResource("2_mpvuq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoher"]
atlas = ExtResource("2_mpvuq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jef0j"]
atlas = ExtResource("2_mpvuq")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg432"]
atlas = ExtResource("2_mpvuq")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_da1db"]
atlas = ExtResource("2_mpvuq")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni6wf"]
atlas = ExtResource("2_mpvuq")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_87tds"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lpr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwh33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5vh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoher")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jef0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg432")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da1db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni6wf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="PlayerHud" type="CanvasLayer"]
script = ExtResource("1_unnjh")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" parent="HUD" instance=ExtResource("2_ubjkd")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 50.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_5colf")
show_percentage = true

[node name="Label" type="Label" parent="HUD/HealthBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -8.0
offset_right = 118.0
offset_bottom = 8.0
grow_vertical = 2
theme = ExtResource("2_7xjn2")
text = "Social Battery:"
label_settings = ExtResource("2_jklyp")
vertical_alignment = 1

[node name="HealthBar3" type="ProgressBar" parent="HUD"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 33.0
size_flags_horizontal = 3
theme = SubResource("Theme_dytfj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_5colf")
theme_override_styles/background = ExtResource("3_fktly")
theme_override_styles/fill = ExtResource("4_fwxer")
value = 50.0

[node name="ProgressBar" type="ProgressBar" parent="HUD/HealthBar3"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = ExtResource("5_wg8lk")
theme_override_styles/fill = ExtResource("6_3xaa5")
value = 70.0
show_percentage = false

[node name="Timer" type="Timer" parent="HUD/HealthBar3"]

[node name="CurrencyTicker" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -71.0
offset_top = 10.0
offset_bottom = 33.0
grow_horizontal = 0

[node name="Value" type="Label" parent="HUD/CurrencyTicker"]
layout_mode = 2
theme = ExtResource("2_7xjn2")
text = "0 :"
label_settings = ExtResource("2_jklyp")

[node name="Control" type="Control" parent="HUD/CurrencyTicker"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HUD/CurrencyTicker/Control"]
sprite_frames = SubResource("SpriteFrames_87tds")
autoplay = "default"
offset = Vector2(8, 0)

[node name="ScoreTicker" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -40.0
offset_right = -14.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="HUD/ScoreTicker"]
layout_mode = 2
theme = ExtResource("2_7xjn2")
text = "Score: "
label_settings = ExtResource("2_jklyp")

[node name="Value" type="Label" parent="HUD/ScoreTicker"]
layout_mode = 2
theme = ExtResource("2_7xjn2")
text = "0
"
label_settings = ExtResource("2_jklyp")

[node name="Actionbar" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -212.0
offset_top = -120.0
offset_right = 188.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100

[node name="ActionButton1" parent="HUD/Actionbar" instance=ExtResource("2_lvbhi")]
layout_mode = 2

[node name="ActionButton2" parent="HUD/Actionbar" instance=ExtResource("2_lvbhi")]
layout_mode = 2

[node name="ActionButton3" parent="HUD/Actionbar" instance=ExtResource("2_lvbhi")]
layout_mode = 2

[node name="ActionButton4" parent="HUD/Actionbar" instance=ExtResource("2_lvbhi")]
layout_mode = 2

[node name="ActionButton5" parent="HUD/Actionbar" instance=ExtResource("2_lvbhi")]
layout_mode = 2
